# portfolio_terminal

./: READMD.md  package-lock.json  package.json
portfolio-be/: Cargo.toml  Dockerfile  docker-compose.prod.yaml  docker-compose.yaml
portfolio-be/fastapi-template/: Dockerfile  main.py  requirements.txt
portfolio-be/frontend/: README.md  package-lock.json  package.json
portfolio-be/frontend/public/: index.html
portfolio-be/frontend/src/: App.css  App.js  index.css
portfolio-be/frontend/src/components/: NavigationBar.js  xterm.js
portfolio-be/frontend/src/pages/: ChatWithAIPage.js  LandingPage.js  Project1Page.js  TerminalPage.js
portfolio-be/src/: main.rs
portfolio-be/tests/: api_integration_tests.rs  crud_tests.rs  error_handling_tests.rs  mod.rs  query_param_tests.rs  test_utils.rs
src/: App.css  App.js  index.css
src/componants/: xterm.js
